<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Look at my GUI</string>
    <string name="ButtonText">Click Here</string>
    <string name="CheckBoxText">Check this out!</string>
    <string name="SwitchText">Switch on/off</string>
    <string name="EditHint">Type Here</string>
    <string name="toast_message">Here is more information</string>
    <string name="enter_email">Enter your email address:</string>
    <string name="EmailHint">Type email here</string>
    <string name="enter_password">Type your password:</string>
    <string name="Profile_text">Your profile</string>
    <string name="Name_hint">Enter your name</string>
    <string name="Name_text">Your name:</string>
    <string name="Email_text">Your email:</string>
    <string name="Picture_text">Your picture:</string>
    <string name="EmailHint2">Enter your email</string>
    <string name="ClickButtonText">Click the button above to take a picture</string>
    <string name="GoToChat">Go To ChatRoom</string>
    <string name="Sendbtn">SEND</string>
    <string name="Receivebtn">RECEIVE</string>
    <string name="delete">Do you want to delete this?</string>
    <string name="row">The selected row is: </string>
    <string name="database">The database id is: </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="weather">Weather Forecast</string>
    <string name="currtemp">Current Temperature</string>
    <string name="mintemp">Min. Temperature</string>
    <string name="maxtemp">Max. Temperature</string>
    <string name="UV">UV Rating</string>
    <string name="fragMsgHere">Message Here</string>
    <string name="fragid">ID=</string>
    <string name="fragMsgSend">Is a Send Message</string>
    <string name="fragHide">HIDE</string>
    <string name="toolbarbutton">Go To Toolbar Page</string>
    <string name="todo">TODO</string>
    <string name="overflowmenu">overflow</string>
    <string name="anotheractivity">Go to another activity</string>
    <string name="chat_page">Chat Page</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="go_back_to_login">Go back to login</string>
    <string name="mastercard">mastercard</string>
    <string name="amex">amex</string>
    <string name="btc">btc</string>
    <string name="globe">globe</string>
    <string name="open">open</string>
    <string name="close">close</string>

</resources>