<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textSize="30sp"
        android:text="@string/hello_message" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_alignParentStart="true"
        android:text="@string/ButtonText" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_toEndOf="@id/button4"
        android:layout_alignParentEnd="true"
        android:text="@string/CheckBoxText" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button4"
        android:layout_alignParentStart="true"
        app:srcCompat="@drawable/flag"
        android:contentDescription="TODO" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/imageButton2"
        android:layout_below="@id/button4"
        android:layout_alignParentEnd="true"
        android:text="@string/SwitchText" />

    <EditText
        android:id="@+id/entertext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButton2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/EditHint"
        android:inputType="textPersonName" />

</RelativeLayout>