<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatRoomActivity">

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@android:color/holo_red_dark"
        android:dividerHeight="1dp"
        android:layout_above="@+id/Sendbtn">
    </ListView>

    <Button
        android:id="@+id/Sendbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:text="@string/Sendbtn"/>

    <Button
        android:id="@+id/Receivebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/Receivebtn"/>

    <EditText
        android:id="@+id/edittextchat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/Receivebtn"
        android:layout_toEndOf="@+id/Sendbtn"
        android:hint="@string/EditHint"/>
</RelativeLayout>